Update to Error Prone 2.36.0 and test on JDK 21 (#232)